--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "linter": "npm-run-all -p eslint prettier",
+    "eslint": "eslint . --ext .js",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.0"
   }
 }
