--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "tempo-retriever",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "linter": "npm-run-all -p eslint prettier",
     "eslint": "eslint . --ext .js",
